@@ -4,37 +4,49 @@
 </%args>
 <%init>
 
-	my $switch;
 	my $entry = Tab::Entry->retrieve($entry_id);
 
 	my $school = $entry->school;
 	my $diocese = $m->comp("/school_region.mas", school => $school) if $tourn->setting("ncfl");
 
 	my $group = $entry->event->judge_group;
+	my @all_judges = $group->judges;
 
  	my @panels = $m->comp('/funclib/entry_panels.mas', entry => $entry);
+
+	my %used;
+	my $switch = 1;
 	
 </%init>
 
-   	<& "/register/menubar.mas", school => $school, whoami => "entries", tourn => $tourn &>
+   	<& "/register/menubar.mas", school => $school, whoami => "students", tourn => $tourn &>
+
+	<div>
+		<span class="hugespan">
+			<h4>Pref Sheet for <% $entry->name %></h4>
+		</span>
+		<span class="medspan">
+			<h4 class="rightalign"><% scalar @all_judges %> judges</h4>
+		</span>
+	</div>
 
 	<& "/funclib/tablesorter.mas", table => "sortme" &>
 
-	<h4>Pref Sheet for <% $entry->name %></h4>
-
 		<table cellpadding="5" id="sortme">
 
-%		if ($group->setting("prefs") eq "ordinals") { 
-				
-				<thead>
+			<thead>
+
 				<tr class="yellowrow">
+
+					<th>
+					</th>
 
 					<th>
 						Judge
 					</th>
 
 					<th class="centeralign">
-						Rounds/Hired
+						Rounds
 					</th>
 
 					<th class="centeralign">
@@ -43,20 +55,53 @@
 
 				</tr>
 
-				</thead>
+			</thead>
 
-				<tbody>
+			<tbody>
 
-%				my $switch;
+%			foreach my $conflict ($m->comp("/funclib/judge_entry_rating.mas", entry => $entry, type => "conflicted")) { 
+
+%				next if $used{$conflict->id};
+%				$used{$conflict->id}++;
+
+				<tr>
+					<td>
+						<% $switch++ %>
+					</td>
+
+					<td>
+						<% $conflict->first." ".$conflict->last %>
+					</td>
+
+					<td class="centeralign">
+						<% $conflict->obligation + $conflict->hired %>
+					</td>
+
+					<td class="smallish">
+						<% $conflict->pref %>
+					</td>
+				</tr>
+
+%			}
+
+%			if ($group->setting("prefs") eq "ordinals") { 
+				
 %				foreach my $rating (sort {$a->ordinal <=> $b->ordinal} $entry->ratings) { 
 
+%					next if $used{$rating->judge->id};
+%					$used{$rating->judge->id}++;
+
 					<tr>
+						<td>
+							<% $switch++ %>
+						</td>
+
 						<td>
 							<% $rating->judge->first." ".$rating->judge->last %>
 						</td>
 
 						<td class="centeralign">
-							<% $rating->judge->obligation %>/<% $rating->judge->hired %>
+							<% $rating->judge->obligation + $rating->judge->hired %>
 						</td>
 
 						<td class="centeralign">
@@ -66,45 +111,7 @@
 
 %				}
 
-%				foreach my $conflict ($m->comp("/funclib/entry_conflicts.mas", entry => $entry, group => $group)) { 
-
-					<tr>
-						<td>
-							<% $conflict->judge->first." ".$conflict->judge->last %>
-						</td>
-
-						<td class="centeralign">
-							<% $conflict->judge->obligation %>/<% $conflict->judge->hired %>
-						</td>
-
-						<td class="centeralign">
-							Conflict
-						</td>
-					</tr>
-
-%				}
-
-%				foreach my $conflict ($m->comp("/funclib/school_conflicts.mas", school => $entry->school, group => $group)) {
-
-					<tr>
-						<td>
-							<% $conflict->judge->first." ".$conflict->judge->last %>
-						</td>
-
-						<td class="centeralign">
-							<% $conflict->judge->obligation %>/<% $conflict->judge->hired %>
-						</td>
-
-						<td class="centeralign">
-							Conflict
-						</td>
-					</tr>
-
-%				}
-				
-				</tbody>
-
-%			}  if ($group->setting("prefs") eq "tiered") { 
+%			}  elsif ($group->setting("prefs") eq "tiered") { 
 
 %				my %tier_name = ();
 
@@ -112,34 +119,23 @@
 %					$tier_name{$tier->id} = $tier->name;
 %				}
 
-				<thead>
-				<tr class="yellowrow">
-
-					<th>
-						Judge
-					</th>
-
-					<th class="centeralign">
-						Rounds/Hired
-					</th>
-
-					<th class="centeralign">
-						Rating
-					</th>
-
-				</tr>
-				</thead>
-
 %				foreach my $rating (sort {$a->rating_tier <=> $b->rating_tier} $entry->ratings) { 
 
+%					$used{$rating->judge->id}++;
+
 					<tr>
+
+						<td>
+							<% $switch++ %>
+						</td>
+
 
 						<td>
 							<% $rating->judge->first." ".$rating->judge->last %>
 						</td>
 
 						<td class="centeralign">
-							<% $rating->judge->obligation %>/<% $rating->judge->hired %>
+							<% $rating->judge->obligation + $rating->judge->hired %>
 						</td>
 
 						<td class="centeralign">
@@ -150,42 +146,9 @@
 
 %				}
 
-%				foreach my $conflict ($m->comp("/funclib/entry_conflicts.mas", entry => $entry, group => $group)) { 
-
-					<tr>
-						<td>
-							<% $conflict->judge->first." ".$conflict->judge->last %>
-						</td>
-
-						<td class="centeralign">
-							<% $conflict->judge->obligation %>/<% $conflict->judge->hired %>
-						</td>
-
-						<td class="centeralign">
-							Conflict
-						</td>
-					</tr>
-
-%				}
-
-%				foreach my $conflict ($m->comp("/funclib/school_conflicts.mas", school => $entry->school, group => $group)) {
-
-					<tr>
-						<td>
-							<% $conflict->judge->first." ".$conflict->judge->last %>
-						</td>
-
-						<td class="centeralign">
-							<% $conflict->judge->obligation %>/<% $conflict->judge->hired %>
-						</td>
-
-						<td class="centeralign">
-							Conflict
-						</td>
-					</tr>
-
-%				}
 %			}
+
+			</tbody>
 
 		</table>
 
@@ -198,14 +161,40 @@
 			<h4>Return</h4>
 			
 			<a class="yellow block" href="edit.mhtml?entry_id=<% $entry_id %>">
-				Return to <% $entry->name %>
+				Return to <% $entry->code %>
+			</a>
+
+			<a class="yellow block" href="/register/reports/prefs.mhtml">
+				Return to Prefs Report
 			</a>
 
 		</div>
 
+%		my $first = 1;
+%		foreach my $judge (@all_judges) { 
+%			next if $used{$judge->id}++;
+%			next if $judge->school && $judge->school->id == $entry->school->id;
+
+%			if ($first) { 
+				<div class="sidenote">
+					<h4>Unrated Judges</h4>
+%					undef $first;
+%			}
+			
+				<a href="/register/judge/edit.mhtml?judge_id=<% $judge->id %>" class="red block">
+					<span class="huntwofive padno ">
+						<% $judge->first." ".$judge->last %> 
+					</span><span class="evensmallerspan padno">
+						<% $judge->obligation + $judge->hired %> Rds
+					</span>
+				</a>
+%		}
+
+		<% $first ?  "" : "</div>" %>
+
 		<div class="sidenote">
 
-			<h4>Other Pref Sheets</h4>
+			<h4>School's Other Prefs</h4>
 
 %			foreach my $other (Tab::Entry->search( event => $entry->event->id, school => $entry->school->id, waitlist => 0, unconfirmed => 0, dropped => 0)) { 
 
