@@ -63,8 +63,12 @@
 
 % 			my @entries = Tab::Entry->search( event => $event->id, school => $school->id );
 %			my @hybrids = $m->comp("/funclib/school_hybrids.mas", event => $event, school => $school);
+%			my %used;
 
-% 			foreach my $entry (@entries) { 
+% 			foreach my $entry (@hybrids, @entries) { 
+
+%				next if $used{$entry->id};
+%				$used{$entry->id}++;
 				
 				<tr>
 
@@ -86,7 +90,7 @@
 %						} 
 					</td>
 	
-					<td <% ($entry->dropped) ? "class=\"strike\"" : "" %> >
+					<td class="<% ($entry->dropped) ? "strike" : "" %> smallish" >
 						<a class="white block" href="/register/entry/edit.mhtml?entry_id=<% $entry->id %>">
 						<% $entry->name %>
 						</a>
@@ -109,11 +113,13 @@
 					</td>
 
 					<td class="centeralign smaller">
+%						if ($entry->othername) { 
+							<% $entry->othername %> Hybrid
+%						}
 						<% $entry->dropped ? "Dropped" : "" %>
 						<% ($entry->dropped && $entry->drop_time) ? "at: ".Tab::niceshortdt($entry->drop_time->set_time_zone($tz)) : "" %>
 						<% ($entry->title) ? $entry->title : "" %>
 					</td>
-
 
 					<td class="centeralign">
 						<a class="<% ($entry->dropped) ? "dkgreen" : "dkred" %> block" href="drop_switch.mhtml?entry_id=<% $entry->id %>">	
@@ -124,59 +130,6 @@
 				</tr>
 %   		}
 
-%			foreach my $entry (@hybrids) { 
-			
-				<tr>
-
-					<td class="smaller centeralign">
-
-%						if ($entry->dropped) { 
-							<a class="dkred block" href="/register/entry/delete.mhtml?entry_id=<% $entry->id %>">
-								DELETE
-							</a>
-%						} else {
-							<% ($entry->waitlist) ? "Waitlist" : "" %>
-							<% ($entry->dq) ? "DQ" : "" %>
-%						} 
-					</td>
-	
-					<td <% ($entry->dropped) ? "class=\"strike\"" : "" %> >
-						<a class="white block" href="/register/entry/edit.mhtml?entry_id=<% $entry->id %>">
-						<% $m->comp("/funclib/entry_name.mas", entry => $entry) %>
-						</a>
-					</td>
-
-%					if ($event->tourn->setting("ask_quals")) { 
-
-						<td>
-%							my $notfirst;
-%							foreach my $qual ($entry->qualifiers) { 
-								<% ($notfirst) ? "<br />" : "" %>
-								<% $qual->name %> 
-								<% ($qual->result) ? "(".$qual->result.")" : "" %> 
-%								$notfirst++;
-%							}
-						</td>
-%					}
-
-					<td class="centeralign smaller">
-						<% Tab::niceshortdt($entry->reg_time->set_time_zone($tz)) %>
-					</td>
-
-					<td class="centeralign smaller">
-						(<% $entry->school->name %> Hybrid) <br/>
-						<% ($entry->dropped) ? "Dropped at: ".Tab::niceshortdt($entry->drop_time->set_time_zone($tz)) : "" %>
-						<% ($entry->title) ? $entry->title : "" %>
-					</td>
-
-					<td class="centeralign">
-						<a class="<% ($entry->dropped) ? "dkgreen" : "dkred" %> block" href="drop_switch.mhtml?entry_id=<% $entry->id %>">	
-							<% ($entry->dropped) ? "Un-Drop" : "DROP" %>
-						</a>
-					</td>
-
-				</tr>
-%   		}
 %   	}
 
 		</tbody>
